--- a/index.html
+++ b/index.html
@@ -19,27 +19,18 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.60); display:flex; align-items:center; justify-content:center; z-index:60; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-  width:11.25%;
-  max-width:90vw;
-  height:auto;
-  background: rgba(255,255,255,0.12);
-  backdrop-filter: blur(8px);
-  border-radius:18px;
-  padding:24px;
-  color:#fff;
-  text-align:center;
-  display:flex;
-  flex-direction:column;
-  justify-content:flex-start;
-  gap:12px;
-  margin:0 auto;
-  line-height:1.3;
+  width:11.25%; max-width:90vw; height:auto;
+  background: rgba(255,255,255,0.12); backdrop-filter: blur(8px);
+  border-radius:18px; padding:24px; color:#fff; text-align:center;
+  display:flex; flex-direction:column; justify-content:flex-start; gap:12px; margin:0 auto; line-height:1.3;
 }
 #overlay-content p { margin:0; }
 #intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; transform-origin:center bottom; }
+
 #instructions-line { font-weight:700; margin-top:8px; color:#fff; text-transform:uppercase; text-decoration:none; }
 #instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
 #instructions-list p { margin:6px 0; text-align:center; }
+
 #overlay-content hr { border:1px solid #fff; margin:12px auto; width:60%; }
 #dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; animation:pulseDismiss 2s infinite; }
 @keyframes pulseDismiss { 0%,100%{opacity:1;}50%{opacity:0.4;} }
@@ -66,7 +57,6 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 #top-qr-button, #vr-button { position:fixed; right:12px; padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem; box-shadow:none; display:none; }
 #top-qr-button { top:12px; } #vr-button { top:64px; }
-
 .pannellum-fullscreen-button { padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; box-shadow:none; }
 
 @media(max-width:900px){
@@ -90,13 +80,16 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
     <img id="intro-icon" src="LexIconWhite,png.png" alt="Lex Icon">
     <p>Lex here, nobody magician, travelling aerial photographer, techbro, eternal soul searcher.<br><br> The photos you are about to view were shot on my DJI OSMO 360 on its maiden journey, and perhaps my own.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="padding:4px 8px; border-radius:6px; background:rgba(255,255,255,0.18); cursor:pointer; display:inline-block;">here</span>.</p>
+
     <hr>
+
     <div id="instructions-line">INSTRUCTIONS</div>
     <div id="instructions-list">
       <p>• Click and drag to look around.</p>
       <p>• Scroll to zoom in/out.</p>
       <p>• Use fullscreen button for best experience.</p>
     </div>
+
     <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
@@ -135,7 +128,6 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
-// images, hotspot text, video flag, license
 const images = [
   { 
     url:"https://i.imgur.com/FYdmUI3.jpeg",
@@ -143,19 +135,17 @@ const images = [
           The Ritz-Carlton can be seen on the distant cliffs.<br>
           The coastal shores are lined with miles of golf courses.`,
     showVideo:true,
-    license: "Photo by Lex, DJI OSMO 360"
+    license:"© Lex"
   },
-  { url:"https://i.imgur.com/fxvVdGH.jpeg", text:"", showVideo:false, license:"Photo by Lex" },
-  { url:"https://i.imgur.com/5SG1SAF.jpeg", text:"", showVideo:false, license:"Photo by Lex" },
-  { url:"https://i.imgur.com/aKtrmef.jpeg", text:"", showVideo:false, license:"Photo by Lex" },
-  { url:"https://i.imgur.com/8Hzld0N.jpeg", text:"", showVideo:false, license:"Photo by Lex" }
+  { url:"https://i.imgur.com/fxvVdGH.jpeg", text:"", showVideo:false, license:"© Lex" },
+  { url:"https://i.imgur.com/5SG1SAF.jpeg", text:"", showVideo:false, license:"© Lex" },
+  { url:"https://i.imgur.com/aKtrmef.jpeg", text:"", showVideo:false, license:"© Lex" },
+  { url:"https://i.imgur.com/8Hzld0N.jpeg", text:"", showVideo:false, license:"© Lex" }
 ];
 
 let currentIndex = 0;
-
-// initialize pannellum viewer
 const viewer = pannellum.viewer('panorama', {
-  type:'equirectangular', panorama:images[currentIndex].url, autoLoad:true,
+  type:'equirectangular', panorama:images[0].url, autoLoad:true,
   hfov:100, showFullscreenCtrl:true, showZoomCtrl:false, compass:false,
   autoRotate:1, autoRotateInactivityDelay:10000, autoRotateStopDelay:0
 });
@@ -178,9 +168,9 @@ const introBlack = document.getElementById('intro-black');
 const licenseBar = document.getElementById('license-bar');
 const videoLinkPanel = document.getElementById('video-link-panel');
 
-// overlay dismissal
-function dismissOverlay(e){
-  if (e.target.closest && e.target.closest('#preview-link')) return;
+// dismiss overlay
+overlay.addEventListener('click', e=>{
+  if (e.target.closest('#preview-link')) return;
   overlay.setAttribute('aria-hidden','true');
   overlay.style.display='none';
   hotspotPanel.style.display='block';
@@ -189,35 +179,35 @@ function dismissOverlay(e){
   qrBtn.style.display='block';
   vrBtn.style.display='block';
   updateHotspotAndVideo(currentIndex);
-}
-overlay.addEventListener('click', dismissOverlay);
+});
 
-// update panorama, hotspot, license, video panel
+// update panorama, hotspots, video & license with fade
 function updateHotspotAndVideo(index){
   currentIndex = index;
 
-  // fade to black
+  // show fade overlay
   introBlack.style.display='block';
-  introBlack.style.opacity=1;
+  introBlack.style.opacity = 1;
 
+  // update panorama
+  viewer.setPanorama(images[index].url, null, { yaw:0, pitch:0, hfov:100 });
+  hotspotPanel.innerHTML = images[index].text;
+  videoLinkPanel.style.display = images[index].showVideo ? 'block' : 'none';
+  licenseBar.innerText = images[index].license || '';
+
+  // fade out overlay
   setTimeout(()=>{
-    viewer.setPanorama(images[index].url, null, { yaw:0, pitch:0, hfov:100 });
-    hotspotPanel.innerHTML = images[index].text;
-    videoLinkPanel.style.display = images[index].showVideo ? 'block' : 'none';
-    licenseBar.innerText = images[index].license || '';
-
-    // fade back in
     introBlack.style.transition='opacity 0.7s';
     introBlack.style.opacity=0;
     setTimeout(()=>{ introBlack.style.display='none'; },700);
-  }, 100);
+  },50);
 }
 
-// arrows
+// arrow navigation
 arrowLeft.addEventListener('click', ()=>updateHotspotAndVideo((currentIndex - 1 + images.length) % images.length));
 arrowRight.addEventListener('click', ()=>updateHotspotAndVideo((currentIndex + 1) % images.length));
 
-// tooltip hover
+// tooltip
 previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
 previewLink.addEventListener('mousemove', e=>{
   const ttW = tooltip.offsetWidth, ttH = tooltip.offsetHeight;
@@ -235,7 +225,7 @@ tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; toolt
 previewLink.addEventListener('click', e=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia', '_blank', 'noopener'); });
 if (tooltipLink) tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
 
-// 360 video modal
+// video modal
 videoLinkPanel.addEventListener('click', e=>{
   e.stopPropagation();
   youtubeFrame.src = "https://www.youtube-nocookie.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
@@ -269,7 +259,21 @@ qrOverlay.addEventListener('click', ()=>{
   arrowRight.style.display='block';
 });
 qrContent.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.opacity = 0; setTimeout(()=> qrOverlay.style.display='none', 300); arrowLeft.style.display='block'; arrowRight.style.display='block'; });
-</script>
 
+// ESC closes modals
+document.addEventListener('keydown', e=>{
+  if (e.key === 'Escape') {
+    if (youtubeOverlay.style.display === 'flex') { 
+      youtubeOverlay.style.opacity = 0; 
+      setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; arrowLeft.style.display='block'; arrowRight.style.display='block'; }, 280); 
+    }
+    if (qrOverlay.style.display === 'flex') { 
+      qrOverlay.style.opacity = 0; 
+      setTimeout(()=> qrOverlay.style.display='none', 300); 
+      arrowLeft.style.display='block'; arrowRight.style.display='block';
+    }
+  }
+});
+</script>
 </body>
 </html>
