--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 html,body { height:100%; margin:0; font-family:'Saira',sans-serif; background:#000; overflow:hidden; user-select:none; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay, #vr-button, #top-qr-button { user-select:none; }
 
+/* Panorama */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-#intro-black { position:fixed; inset:0; background:#000; z-index:50; opacity:1; transition:opacity 0.7s; }
+/* intro black fade */
+#intro-black { position:fixed; inset:0; background:#000; z-index:50; }
 
+/* license bar */
 #license-bar { position: fixed; bottom:12px; left:50%; transform:translateX(-50%); max-width:92%; background: rgba(0,0,0,0.18); backdrop-filter:blur(10px); color:#fff; padding:10px 18px; font-size:13px; z-index:12; text-align:center; border-radius:12px; white-space:pre-wrap; overflow-y:auto; }
 
+/* overlay */
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.60); display:flex; align-items:center; justify-content:center; z-index:60; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
@@ -37,40 +41,61 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
   line-height:1.3;
 }
 #overlay-content p { margin:0; }
-#intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; transform-origin:center bottom; }
+#intro-icon {
+  width:80px; height:80px; margin:0 auto 12px auto; display:block;
+  transform-origin:center bottom;
+}
 
+/* instructions header */
 #instructions-line { font-weight:700; margin-top:8px; color:#fff; text-transform:uppercase; text-decoration:none; }
+
+/* list */
 #instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
 #instructions-list p { margin:6px 0; text-align:center; }
 
+/* divider */
 #overlay-content hr { border:1px solid #fff; margin:12px auto; width:60%; }
 
+/* dismiss pulse */
 #dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; animation:pulseDismiss 2s infinite; }
 @keyframes pulseDismiss { 0%,100%{opacity:1;}50%{opacity:0.4;} }
 
+/* tooltip preview */
 #tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:6px 10px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
 #tooltip-preview img { width:100%; height:auto; object-fit:contain; border-radius:6px; }
 
+/* hotspot & video panels */
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
 #video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.30); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#d0d0d0; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
 
-.arrow-btn { position:fixed; top:50%; transform:translateY(-50%); font-size:2rem; color:#fff; background: rgba(0,0,0,0.4); border:none; border-radius:50%; padding:12px; cursor:pointer; z-index:90; display:none; box-shadow:0 4px 12px rgba(0,0,0,0.6); opacity:0.7; transition:opacity 0.2s; }
+/* arrow buttons */
+.arrow-btn {
+  position:fixed; top:50%; transform:translateY(-50%);
+  font-size:2rem; color:#fff; background: rgba(0,0,0,0.4);
+  border:none; border-radius:50%; padding:12px; cursor:pointer;
+  z-index:90; display:none; box-shadow:0 4px 12px rgba(0,0,0,0.6);
+  opacity:0.7; transition:opacity 0.2s;
+}
 .arrow-btn:hover { opacity:1; }
 #arrow-left { left:12px; }
 #arrow-right { right:12px; }
 
+/* youtube modal */
 #youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
 #youtube-content { background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); border-radius:16px; padding:12px; max-width:90%; width:880px; max-height:80%; height:480px; display:flex; flex-direction:column; align-items:center; justify-content:center; }
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
 
+/* qr overlay & content */
 #qr-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
 #qr-content { display:flex; flex-direction:column; align-items:center; justify-content:center; padding:12px; border-radius:16px; background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); width:max-content; height:max-content; gap:8px; box-shadow:none; }
 #qr-content img { width:512px; height:512px; object-fit:contain; border-radius:32px; }
 #qr-content p { margin:0; color:#d0d0d0; font-size:0.95rem; text-align:center; }
 
+/* QR & VR buttons */
 #top-qr-button, #vr-button { position:fixed; right:12px; padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem; box-shadow:none; display:none; }
 #top-qr-button { top:12px; } #vr-button { top:64px; }
 
+/* fullscreen control style */
 .pannellum-fullscreen-button { padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; box-shadow:none; }
 
 @media(max-width:900px){
@@ -94,13 +119,16 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
     <img id="intro-icon" src="LexIconWhite,png.png" alt="Lex Icon">
     <p>Lex here, nobody magician, travelling aerial photographer, techbro, eternal soul searcher.<br><br> The photos you are about to view were shot on my DJI OSMO 360 on its maiden journey, and perhaps my own.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="padding:4px 8px; border-radius:6px; background:rgba(255,255,255,0.18); cursor:pointer; display:inline-block;">here</span>.</p>
+
     <hr>
+
     <div id="instructions-line">INSTRUCTIONS</div>
     <div id="instructions-list">
       <p>• Click and drag to look around.</p>
       <p>• Scroll to zoom in/out.</p>
       <p>• Use fullscreen button for best experience.</p>
     </div>
+
     <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
@@ -139,7 +167,6 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
-// image data
 const images = [
   { 
     url:"https://i.imgur.com/FYdmUI3.jpeg",
@@ -156,9 +183,8 @@ const images = [
 
 let currentIndex = 0;
 
-// init pannellum
 const viewer = pannellum.viewer('panorama', {
-  type:'equirectangular', panorama:images[currentIndex].url, autoLoad:true,
+  type:'equirectangular', panorama:images[0].url, autoLoad:true,
   hfov:100, showFullscreenCtrl:true, showZoomCtrl:false, compass:false,
   autoRotate:1, autoRotateInactivityDelay:10000, autoRotateStopDelay:0
 });
@@ -166,7 +192,6 @@ const viewer = pannellum.viewer('panorama', {
 // DOM refs
 const overlay = document.getElementById('overlay');
 const hotspotPanel = document.getElementById('hotspot-panel');
-const videoLinkPanel = document.getElementById('video-link-panel');
 const previewLink = document.getElementById('preview-link');
 const tooltip = document.getElementById('tooltip-preview');
 const tooltipLink = document.getElementById('tooltip-link');
@@ -180,57 +205,56 @@ const arrowLeft = document.getElementById('arrow-left');
 const arrowRight = document.getElementById('arrow-right');
 const introBlack = document.getElementById('intro-black');
 const licenseBar = document.getElementById('license-bar');
+const videoLinkPanel = document.getElementById('video-link-panel');
 
-// dismiss overlay
+// overlay dismissal
 overlay.addEventListener('click', (e)=>{
-  if (e.target.closest('#preview-link')) return;
+  if (e.target.closest && e.target.closest('#preview-link')) return;
+
   overlay.setAttribute('aria-hidden','true');
   overlay.style.display='none';
-
-  // fade out black overlay
-  introBlack.style.opacity = 0;
-  setTimeout(()=>{ introBlack.style.display='none'; }, 700);
-
-  // show controls
   hotspotPanel.style.display='block';
   arrowLeft.style.display='block';
   arrowRight.style.display='block';
   qrBtn.style.display='block';
   vrBtn.style.display='block';
+  updateImage(currentIndex);
 
-  updateHotspotAndVideo(currentIndex);
+  setTimeout(() => {
+    introBlack.style.transition='opacity 0.7s';
+    introBlack.style.opacity=0;
+    setTimeout(()=>{ introBlack.style.display='none'; }, 700);
+  }, 1000);
 });
 
-// update panorama
-function updateHotspotAndVideo(index){
+// update panorama and hotspot/video
+function updateImage(index){
   currentIndex = index;
-  viewer.loadScene('scene' + index); // optional, we can use setPanorama instead
-  viewer.setPanorama(images[index].url);
-  hotspotPanel.innerHTML = images[index].text;
-  videoLinkPanel.style.display = images[index].showVideo ? 'block' : 'none';
+  viewer.setPanorama(images[currentIndex].url);
+  hotspotPanel.innerHTML = images[currentIndex].text;
+  videoLinkPanel.style.display = images[currentIndex].showVideo ? 'block' : 'none';
 }
 
-// arrows
-arrowLeft.addEventListener('click', ()=>updateHotspotAndVideo((currentIndex - 1 + images.length) % images.length));
-arrowRight.addEventListener('click', ()=>updateHotspotAndVideo((currentIndex + 1) % images.length));
+// arrow navigation
+arrowLeft.addEventListener('click', ()=>updateImage((currentIndex - 1 + images.length) % images.length));
+arrowRight.addEventListener('click', ()=>updateImage((currentIndex + 1) % images.length));
 
 // tooltip
 previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
 previewLink.addEventListener('mousemove', e=>{
   const ttW = tooltip.offsetWidth, ttH = tooltip.offsetHeight;
-  let left = e.clientX - ttW/2;
-  let top = e.clientY - ttH - 12;
-  if (top < 8) top = e.clientY + 12;
-  if (left < 8) left = 8;
-  if (left + ttW > window.innerWidth - 8) left = window.innerWidth - ttW - 8;
-  tooltip.style.left = Math.round(left) + 'px';
-  tooltip.style.top = Math.round(top) + 'px';
+  let left = e.clientX - ttW/2, top = e.clientY - ttH - 12;
+  if(top<8) top = e.clientY+12;
+  if(left<8) left=8;
+  if(left+ttW>window.innerWidth-8) left=window.innerWidth-ttW-8;
+  tooltip.style.left = Math.round(left)+'px';
+  tooltip.style.top = Math.round(top)+'px';
 });
-previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover') && !previewLink.matches(':hover')) { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } }, 80); });
+previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover') && !previewLink.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } }, 80); });
 tooltip.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
 tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-previewLink.addEventListener('click', e=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia', '_blank', 'noopener'); });
-if (tooltipLink) tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
+previewLink.addEventListener('click', e=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
+if(tooltipLink) tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
 
 // 360 video
 videoLinkPanel.addEventListener('click', e=>{
@@ -247,41 +271,30 @@ youtubeOverlay.addEventListener('click', ()=>{
 });
 
 // QR overlay
-qrBtn.addEventListener('click', e=>{
+qrBtn.addEventListener('click', e=>{ 
   e.stopPropagation();
   qrOverlay.style.display='flex';
   arrowLeft.style.display='none';
   arrowRight.style.display='none';
   requestAnimationFrame(()=> qrOverlay.style.opacity=1);
 });
-qrOverlay.addEventListener('click', ()=>{
-  qrOverlay.style.opacity=0;
-  setTimeout(()=> qrOverlay.style.display='none', 300);
-  arrowLeft.style.display='block';
-  arrowRight.style.display='block';
-});
-qrContent.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none', 300); arrowLeft.style.display='block'; arrowRight.style.display='block'; });
+qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300); arrowLeft.style.display='block'; arrowRight.style.display='block'; });
+qrContent.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); arrowLeft.style.display='block'; arrowRight.style.display='block'; });
 
 // ESC closes modals
 document.addEventListener('keydown', e=>{
   if(e.key==='Escape'){
-    if(youtubeOverlay.style.display==='flex'){ 
-      youtubeOverlay.style.opacity=0; 
-      setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; arrowLeft.style.display='block'; arrowRight.style.display='block'; }, 280);
-    }
+    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; arrowLeft.style.display='block'; arrowRight.style.display='block'; },280); }
     if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); arrowLeft.style.display='block'; arrowRight.style.display='block'; }
   }
 });
 
-// license text
-licenseBar.textContent = "© Lex 2025. All rights reserved.";
+// fade intro initially
+setTimeout(()=>{ introBlack.style.transition='opacity 0.7s'; introBlack.style.opacity=0; setTimeout(()=>{ introBlack.style.display='none'; },700); },2500);
 
-// preload all images
-images.forEach(img=>{
-  const i = new Image();
-  i.src = img.url;
-});
-
+// simulate license loading
+setTimeout(()=>{ licenseBar.textContent = "Images © Lex of Dystopia | All Rights Reserved"; },1200);
 </script>
+
 </body>
 </html>
